fixed overflow in searchresullt page

--- a/src/components/MovieCard.scss
+++ b/src/components/MovieCard.scss
@@ -120,6 +120,5 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 15rem;
-  transform: translate(50%, 50%);
+  transform: translate(-50%, -50%);
 }
